--- a/ConstantEncryption/ConstantEncryption.vcxproj
+++ b/ConstantEncryption/ConstantEncryption.vcxproj
@@ -120,6 +120,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)contrib/doctest/doctest/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -140,6 +141,7 @@
     <ClInclude Include="const_assign.h" />
     <ClInclude Include="const_hash.h" />
     <ClInclude Include="const_random.h" />
+    <ClInclude Include="const_sequence.h" />
     <ClInclude Include="const_string.h" />
     <ClInclude Include="const_time.h" />
     <ClInclude Include="integer.h" />
